test/files/neg/trait_fields_var_override.scala
trait SizeChangeEvent { protected var end: Int = 1 }
class BackedUpListIterator[E](override protected var end: Int) extends SizeChangeEvent
