test/files/neg/trait_fields_var_override.check
trait_fields_var_override.scala:2: error: overriding protected def end: Int (defined in trait SizeChangeEvent);
 override protected def end: Int cannot override a mutable variable
class BackedUpListIterator[E](override protected var end: Int) extends SizeChangeEvent
                                                     ^
one error found
